Fix chrome scrollbar hide

--- a/src/SearchSideBar.css
+++ b/src/SearchSideBar.css
@@ -10,7 +10,10 @@
     -ms-overflow-style: none; /* for Internet Explorer, Edge */
     scrollbar-width: none; /* for Firefox */
     overflow-y: scroll; 
-  }
+  }::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
   
   .searchSidebarItem {
     -webkit-touch-callout: none; /* iOS Safari */
